<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/empty"
        android:icon="@drawable/ic_action_overflow"
        android:orderInCategory="101"
        android:title="@string/options"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/option_list"
                android:icon="@drawable/ic_list"
                android:title="@string/leave_list"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/option_sanction_leave"
                android:icon="@drawable/ic_add"
                android:title="@string/add_leave"
                app:showAsAction="ifRoom" />
        </menu>
    </item>

</menu>
