<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_toLeftOf="@+id/lyt_count"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/from_date"
                android:textColor="@color/colorBlack"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/leave_from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:padding="5dp"
                android:textColor="@color/colorBlack"
                android:textSize="16dp" />


            <TextView
                android:id="@+id/session_from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:padding="5dp"
                android:textColor="@color/colorBlack"
                android:textSize="14dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/to_date"
                android:textColor="@color/colorBlack"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/leave_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:padding="5dp"
                android:textColor="@color/colorBlack"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/session_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:padding="5dp"
                android:textColor="@color/colorBlack"
                android:textSize="14dp" />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="0.5dp"
        android:layout_height="60dp"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/lyt_count"
        android:background="@color/colorAsh" />

    <LinearLayout
        android:id="@+id/lyt_count"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentRight="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/leave_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="20dp"
                android:textColor="@color/colorWhite"
                android:textSize="25dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/leave_count"
                android:layout_gravity="center_vertical"
                android:paddingLeft="20dp"
                android:text="@string/day"
                android:textColor="@color/colorWhite"
                android:textSize="16dp" />

        </RelativeLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/lyt_count"
        android:background="@color/colorAsh" />

</RelativeLayout>